# ai-linkedin-briefing

./: .env.example  .gitignore  README.md  agent_spec.md  linkedin_recording.py  newsletter_template.md  post example 21 Nov 2025.rtf  pyproject.toml  repo_memo.md  sample_newsletter.rtf  source_criteria.md  staging_newsletter_2026-03-04.md  staging_newsletter_2026-03-05.md  staging_post_2026-03-04.txt  staging_post_2026-03-05.txt  staging_sources_2026-03-04.md  staging_sources_2026-03-05.md
src/ai_linkedin_briefing/: __init__.py  cli.py  config.py  documents.py  drafter.py  exceptions.py  logging_utils.py  models.py  orchestrator.py  output_store.py  renderer.py  secrets_manager.py  source_loader.py  summarizer.py  validator.py
src/ai_linkedin_briefing/publishers/: browser.py
